# SparkKG-ML

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.rst  pyproject.toml
docs/: Makefile  conf.py  dataAcquisition.rst  dataAugmentation.rst  example.ipynb  featureAugmentation.rst  featureEngineering.rst  featureSelection.rst  gettingStarted.rst  index.rst  installation.rst  kg.rst  make.bat  motifWalks.rst  rate_limits.db  requirements.txt  semantification.rst  sere.rst  vectorization.rst
experiments/: README.md
experiments/SERE/: README.md  SERE_AM_executor#+partition#.ipynb  SERE_AM_executor#.ipynb  SERE_AM_partition#.ipynb  SERE_AM_path_num.ipynb  SERE_MUTAG_classification.ipynb  SERE_recipeKG_path_num.ipynb  pyRDF2Vec_AM_path_num.ipynb  pyRDF2Vec_recipeKG_path_num.ipynb  pyRDF2vec_MUTAG_classification.ipynb
experiments/functionality/: distrdf2ml-binary-classification.scala  distrdf2ml-multiclass-classification.scala  sparkkgml-binary-classification-with-data-augmentation.ipynb  sparkkgml-binary-classification.ipynb  sparkkgml-multiclass-classification.ipynb
experiments/performance/: distrdf2ml-dataset-size.scala  distrdf2ml-resultset-size.scala  distrdf2ml-sparql-query-complexity.scala  sparkkgml-dataset-size.ipynb  sparkkgml-processing-power.ipynb  sparkkgml-resultset-size.ipynb  sparkkgml-spark-setup.ipynb  sparkkgml-sparql-query-complexity.ipynb
experiments/pipelines/: distrdf2ml-pipeline.scala  python-pipeline.py  sparkkgml-pipeline.py
src/sparkkgml/: __init__.py  data_acquisition.py  data_augmentation.py  feature_engineering.py  feature_selection.py  kg.py  motif_walks.py  semantification.py  vectorization.py
tests/: test_sparkkgml.py
