[tool.poetry]
name = "sparkkgml"
version = "0.1.0"
description = "A Python Library to Facilitate end-to-end Machine Learning over Knowledge Graphs on Apache Spark"
authors = ["IDIAS Lab"]
license = "Apache License 2.0"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
