[tool.poetry]
name = "sparkkgml"
version = "0.1.11"
description = "From Knowledge Graphs to Machine Learning!"
authors = ["IDIAS Lab"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "^3.2"
sparql-dataframe = "^0.4"
kgextension = "^0.1.1"

[tool.poetry.group.dev.dependencies]
myst-nb = {version = "^0.17.2", python = "^3.9"}
sphinx-autoapi = "^2.1.1"
sphinx-rtd-theme = "^1.2.2"
sphinx-collapse = "^0.1.2"
sphinx-design = "^0.4.1"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
